--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-vue-next": "^0.483.0",
+        "mongodb": "^6.15.0",
         "radix-vue": "^1.9.17",
         "reka-ui": "^2.1.1",
         "tailwind-merge": "^3.0.2",
